# dbt-semguard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  publish.yml  published-action-smoke.yml  semguard-pr-comment-test.yml
docs/: contract-spec.md  how-to-use.md  roadmap.md  severity-rules.md  troubleshooting.md
examples/ecommerce_dbt_project/models/: orders.yml
src/dbt_semguard/: __init__.py  action_runner.py  cli.py  diffing.py  extractors.py  git_utils.py  github.py  models.py  normalization.py  reporting.py  yaml_extractors.py
tests/: test_action_runner.py  test_cli.py  test_diff_rules.py  test_docs.py  test_extractors.py  test_git_mode.py  test_github.py  test_release_surface.py  test_reporting.py
tests/fixtures/contracts/: base_contract.json  breaking_contract.json
tests/fixtures/manifest/: base_manifest.json  base_semantic_manifest.json
tests/fixtures/projects/base/models/: orders.yml
tests/fixtures/projects/breaking_change/models/: orders.yml
tests/fixtures/projects/risky_change/models/: orders.yml
tests/fixtures/projects/safe_change/models/: orders.yml
