[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dbt-semguard"
version = "0.5.0"
description = "Catch semantic breaking changes in dbt metrics before they land in production."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "yeaight7" }
]
keywords = ["dbt", "semantic-layer", "metrics", "github-actions", "data-quality"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
]

[project.urls]
Repository = "https://github.com/yeaight7/dbt-semguard"
Issues = "https://github.com/yeaight7/dbt-semguard/issues"
Changelog = "https://github.com/yeaight7/dbt-semguard/blob/main/CHANGELOG.md"
Documentation = "https://github.com/yeaight7/dbt-semguard#readme"

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[project.scripts]
semguard = "dbt_semguard.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_semguard"]
